@@ -4,7 +4,6 @@ import static java.lang.String.format;
 import static java.util.Arrays.asList;
 import static java.util.Arrays.stream;
 import static java.util.Objects.requireNonNull;
-import static java.util.stream.Collectors.toList;
 
 import java.nio.charset.StandardCharsets;
 import java.util.LinkedHashMap;
@@ -155,7 +154,7 @@ class Partisjon {
                                 )
                         )
                 )
-                .collect(toList());
+                .toList();
     }
 
     void stop() {
